--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.0",
+    "@solana/buffer-layout": "^4.0.0",
+    "@solana/pay": "^0.1.2",
+    "@solana/spl-token": "^0.2.0-alpha.1",
+    "@solana/wallet-adapter-base": "^0.9.2",
+    "@solana/wallet-adapter-react": "^0.15.3",
+    "@solana/wallet-adapter-react-ui": "^0.9.3",
+    "@solana/wallet-adapter-react-ui-starter": "^0.9.3",
+    "@solana/wallet-adapter-wallets": "^0.15.4",
+    "@solana/web3.js": "^1.34.0",
     "bignumber.js": "^9.0.2",
     "next": "latest",
     "react": "^17.0.2",
